xt-conditional-lastprivate/results/compile.log
clang version 7.0.0 (http://llvm.org/git/clang.git 7c968ea1709d27fd0701edb1a45e61f6bd5ea1b9) (http://llvm.org/git/llvm.git 10183d6bcdd01510e3521fa9b9c4d7403826364b)
Target: powerpc64le-ibm-linux-gnu
Thread model: posix
InstalledDir: /localhd/gbercea/patch-compiler/obj-release/bin
Found candidate GCC installation: /usr/lib/gcc/powerpc64le-linux-gnu/4.8
Found candidate GCC installation: /usr/lib/gcc/powerpc64le-linux-gnu/4.8.4
Found candidate GCC installation: /usr/lib/gcc/powerpc64le-linux-gnu/4.9
Found candidate GCC installation: /usr/lib/gcc/powerpc64le-linux-gnu/4.9.1
Selected GCC installation: /usr/lib/gcc/powerpc64le-linux-gnu/4.8
Candidate multilib: .;@m64
Selected multilib: .;@m64
Found CUDA installation: /usr/local/cuda-8.0, version 8.0
 "/localhd/gbercea/patch-compiler/obj-release/bin/clang-6.0" -cc1 -triple powerpc64le-ibm-linux-gnu -emit-llvm-bc -emit-llvm-uselists -disable-free -main-file-name test.c -mrelocation-model pic -pic-level 2 -mthread-model posix -fmath-errno -masm-verbose -mconstructor-aliases -fuse-init-array -target-cpu pwr8 -mfloat-abi hard -target-abi elfv2 -dwarf-column-info -debugger-tuning=gdb -momit-leaf-frame-pointer -v -resource-dir /localhd/gbercea/patch-compiler/obj-release/lib/clang/7.0.0 -I /localhd/gbercea/patch-compiler/obj-release/lib -I /localhd/gbercea/patch-compiler/obj-release/lib/../ -I /localhd/gbercea/patch-compiler/obj-release/lib/../projects/openmp/runtime/src/ -internal-isystem /usr/local/include -internal-isystem /localhd/gbercea/patch-compiler/obj-release/lib/clang/7.0.0/include -internal-externc-isystem /usr/include/powerpc64le-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -internal-isystem /usr/local/include -internal-isystem /localhd/gbercea/patch-compiler/obj-release/lib/clang/7.0.0/include -internal-externc-isystem /usr/include/powerpc64le-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -O3 -fdebug-compilation-dir /localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/results -ferror-limit 19 -fmessage-length 0 -fopenmp -fno-signed-char -fobjc-runtime=gcc -fdiagnostics-show-option -vectorize-loops -vectorize-slp -o /tmp/test-6fd3c3.bc -x c /localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c -fopenmp-targets=nvptx64-nvidia-cuda
clang -cc1 version 7.0.0 based upon LLVM 7.0.0svn default target powerpc64le-unknown-linux-gnu
ignoring nonexistent directory "/include"
ignoring nonexistent directory "/include"
ignoring duplicate directory "/usr/local/include"
ignoring duplicate directory "/localhd/gbercea/patch-compiler/obj-release/lib/clang/7.0.0/include"
ignoring duplicate directory "/usr/include/powerpc64le-linux-gnu"
ignoring duplicate directory "/usr/include"
#include "..." search starts here:
#include <...> search starts here:
 /localhd/gbercea/patch-compiler/obj-release/lib
 /localhd/gbercea/patch-compiler/obj-release/lib/..
 /localhd/gbercea/patch-compiler/obj-release/lib/../projects/openmp/runtime/src
 /usr/local/include
 /localhd/gbercea/patch-compiler/obj-release/lib/clang/7.0.0/include
 /usr/include/powerpc64le-linux-gnu
 /usr/include
End of search list.
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:43:9: error: use of undeclared identifier 'conditional'
        _Pragma("omp for lastprivate(conditional: q0)")
        ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:49:9: error: use of undeclared identifier 'conditional'
        _Pragma("omp for schedule(auto) lastprivate(conditional: q1)")
        ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:55:9: error: use of undeclared identifier 'conditional'
        _Pragma("omp for schedule(dynamic) lastprivate(conditional: q2)")
        ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:61:9: error: use of undeclared identifier 'conditional'
        _Pragma("omp for schedule(guided) lastprivate(conditional: q3)")
        ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:67:9: error: use of undeclared identifier 'conditional'
        _Pragma("omp for schedule(runtime) lastprivate(conditional: q4)")
        ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:73:9: error: use of undeclared identifier 'conditional'
        _Pragma("omp for schedule(static) lastprivate(conditional: q5)")
        ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:79:9: error: use of undeclared identifier 'conditional'
        _Pragma("omp for schedule(static,1) lastprivate(conditional: q6)")
        ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:85:9: error: use of undeclared identifier 'conditional'
        _Pragma("omp for schedule(static,9) lastprivate(conditional: q7)")
        ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:91:9: error: use of undeclared identifier 'conditional'
        _Pragma("omp for schedule(static,13) lastprivate(conditional: q8)")
        ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:97:9: error: use of undeclared identifier 'conditional'
        _Pragma("omp for schedule(static,30000) lastprivate(conditional: q9)")
        ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:107:27: warning: format specifies type 'double' but the argument has type 'int' [-Wformat]
    }, VERIFY(0, 1, S[0], 30710 ));
       ~~~~~~~~~~~~~~~~~~~^~~~~~~
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/../utilities/utilities.h:35:70: note: expanded from macro 'VERIFY'
      printf ("Failed at %3d with %s, expected %f, got %f\n", i, #X, VAL, X); \
                                               ~~                    ^~~
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/../utilities/utilities.h:60:5: note: expanded from macro 'TEST'
    V \
    ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/test.c:107:21: warning: format specifies type 'double' but the argument has type 'int' [-Wformat]
    }, VERIFY(0, 1, S[0], 30710 ));
       ~~~~~~~~~~~~~^~~~~~~~~~~~~
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/../utilities/utilities.h:35:75: note: expanded from macro 'VERIFY'
      printf ("Failed at %3d with %s, expected %f, got %f\n", i, #X, VAL, X); \
                                                       ~~                 ^
/localhd/gbercea/patch-compiler/src/projects/openmp/libomptarget/omptests/t-conditional-lastprivate/../utilities/utilities.h:60:5: note: expanded from macro 'TEST'
    V \
    ^
2 warnings and 10 errors generated.
